# albus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
albus/: __init__.py  metrics.py  tools.py
albus/ocean/: __init__.py  oxygen.py
notebook/: demo.ipynb
notebook/data/: mask.pt  o-truth.pt
tests/: test_metrics.py  test_oxygen.py  test_tools.py
